fixed z-index

--- a/src/components/input/Input.scss
+++ b/src/components/input/Input.scss
@@ -18,6 +18,7 @@
     font-weight: bold;
     justify-content: space-between;
     position: relative;
+    z-index: 1;
   }
 
   .input-header-icons {
